<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/text_dimond_finder"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_map_black_24dp">
    </item>
    <item
        android:id="@+id/action_cart"
        android:title="@string/text_race"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/img_diamond">
    </item>
    <item
        android:id="@+id/action_hot_deals"
        android:title="@string/text_profile"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_black_24dp">
    </item>

</menu>