<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:orientation="vertical"
    tools:context=".Gamer.Activity.ComplateProfileActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_rec_shape" />

        <ImageView
            android:id="@+id/img_charracter"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/img1"
            app:layout_constraintEnd_toEndOf="@+id/img1"
            app:layout_constraintStart_toStartOf="@+id/img1"
            app:layout_constraintTop_toBottomOf="@+id/img1"
            app:srcCompat="@drawable/piratilcharacter" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/box_bg"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl2">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:src="@drawable/purple_dimond"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/text_add_info" />

        <EditText
            android:id="@+id/edt_name_family"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/ic_edit_text_bg"
            android:ems="10"
            android:focusable="auto"
            android:gravity="start|center_vertical"
            android:hint="@string/text_name_and_family"
            android:inputType="textPersonName"
            android:padding="@dimen/padding_10"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/reagent_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/ic_edit_text_bg"
            android:ems="10"
            android:focusable="auto"
            android:gravity="end|center_vertical"
            android:hint="@string/text_reagent_phone_numbe"
            android:inputType="phone"
            android:padding="@dimen/padding_10"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"/>

        <RadioGroup
            android:id="@+id/ebtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/rbtn_men"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_radio_button_men" />

            <RadioButton
                android:id="@+id/rbtn_woman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/radiobutton_woman" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_summbit_info"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/ic_button_bg"
            android:text="@string/textbutton_submit_information"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>