<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/botton_nav_bg"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/lyt_dimond_finder"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_dimond_finder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            app:srcCompat="@drawable/ic_map_black_24dp" />

        <TextView
            android:id="@+id/txt_dimond_finder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/text_dimond_finder" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lyt_race"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_race"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            app:srcCompat="@drawable/img_diamond" />

        <TextView
            android:id="@+id/txt_race"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/text_race" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lyt_profile"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            app:srcCompat="@drawable/ic_account_circle_black_24dp" />

        <TextView
            android:id="@+id/txt_profile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/text_profile" />

    </LinearLayout>


</LinearLayout>