<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:orientation="vertical"
    tools:context=".Gamer.Activity.EnterCodeActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ll3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_rec_shape" />

        <ImageView
            android:id="@+id/img_charracter"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/img1"
            app:layout_constraintEnd_toEndOf="@+id/img1"
            app:layout_constraintStart_toStartOf="@+id/img1"
            app:layout_constraintTop_toBottomOf="@+id/img1"
            app:srcCompat="@drawable/piratilcharacter" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/box_bg"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_10"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl2">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:src="@drawable/purple_dimond"
            />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10"
            android:gravity="center"
            android:text="@string/text_enter_code_tip"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_enter_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/edit_text_shape_bg"
            android:digits="01234567890"
            android:ems="10"
            android:gravity="end|center_vertical"
            android:hint="@string/text_edt_code"
            android:inputType="phone"
            android:padding="@dimen/padding_10"
            android:textColorHint="@color/edit_text_color"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_code_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_shape_bg"
            android:gravity="center"
            android:paddingEnd="@dimen/padding_40"
            android:paddingStart="@dimen/padding_40"
            android:text="@string/code_registration"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_22"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_resend_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10"
            android:text="@string/text_resend_code"
            android:textColor="@color/link_color_disable" />

        <TextView
            android:id="@+id/txt_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_counter"
            android:textColor="@color/link_color_disable" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>